--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -8,26 +8,19 @@ on:
     secrets:
       MONDOO_CLIENT:
         required: true
-  workflow_run:
-    workflows: ["Unit Tests"]
-    types:
-      - completed
 
 env:
   MONDOO_CLIENT_IMAGE_TAG: ${{ github.event.inputs.mondooClientImageTag }}
 
 # https://docs.github.com/en/actions/security-guides/automatic-token-authentication#permissions-for-the-github_token
 permissions:
-      contents: read
-      pull-requests: read
-      actions: read
-# Attention: These jobs still have access to all the secrets when triggered by a workflow_run event.
+  contents: read
+# Attention: These jobs still have access to all the secrets.
 
 jobs:
   integration-tests:
     runs-on: ubuntu-latest
     name: Integration tests
-    if: github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_call'
     strategy:
       fail-fast: false
       matrix:
