--- a/.github/workflows/security-tests.yaml
+++ b/.github/workflows/security-tests.yaml
@@ -4,23 +4,16 @@ on:
     secrets:
       MONDOO_CLIENT:
         required: true
-  workflow_run:
-    workflows: ["Unit Tests"]
-    types:
-      - completed
 
 # https://docs.github.com/en/actions/security-guides/automatic-token-authentication#permissions-for-the-github_token
 permissions:
-      contents: read
-      pull-requests: read
-      actions: read
-# Attention: These jobs still have access to all the secrets when triggered by a workflow_run event.
+  contents: read
+# Attention: These jobs still have access to all the secrets.
 
 jobs:
   security-tests:
     runs-on: ubuntu-latest
     name: Security tests
-    if: github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_call'
     env:
       # Use docker.io for Docker Hub if empty
       REGISTRY: ghcr.io
