Fix action version
Signed-off-by: Christian Zunker <christian@mondoo.com>

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -23,7 +23,7 @@ jobs:
       pull-requests: write
     steps:
       - name: remove labels
-        uses: andymckay/labeler@v1
+        uses: andymckay/labeler@1.0.4
         with:
           remove-labels: "ok to test"
   unit-tests:
