Check non-fork PRs aren't created by dependabot
Signed-off-by: Christian Zunker <christian@mondoo.com>

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -19,7 +19,7 @@ jobs:
     name: Check label
     runs-on: ubuntu-latest
     if: |
-      !github.event.pull_request.head.repo.fork
+      (!github.event.pull_request.head.repo.fork && github.actor != 'dependabot[bot]')
       || (github.actor == 'dependabot[bot]' && contains(github.event.pull_request.labels.*.name, 'ok to test'))
       || (github.event.pull_request.head.repo.fork && contains(github.event.pull_request.labels.*.name, 'ok to test'))
     permissions:
