--- a/.github/workflows/cnspec.yaml
+++ b/.github/workflows/cnspec.yaml
@@ -1,6 +1,8 @@
 name: Publish cnspec container with providers
 
 on:
+  repository_dispatch:
+    types: [update]
   workflow_dispatch:
     inputs:
       version:
