--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -19,6 +19,11 @@ jobs:
       - uses: actions/checkout@v4
       - name: Import environment variables from file
         run: cat ".github/env" >> $GITHUB_ENV
+      - name: Install Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: ">=${{ env.golang-version }}"
+          cache: false
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
