--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -62,6 +62,12 @@ rules:
   - list
   - watch
 - apiGroups:
+  - batch
+  resources:
+  - jobs
+  verbs:
+  - deletecollection
+- apiGroups:
   - cert-manager.io
   resources:
   - certificates
